24 March 2004 Radu Ursu
- made doc work with our current tools 

22 February 2004 [af]
- Replaced tail recursion of Alpha_shape_2::traverse()
- Replaced set/map with Unique_hash_map

Version 11.50 (09 February 2004) [rursu]
- Updated headers for examples

Version 11.49 (25 January 2004) [af]
- Removed Alpha_shape_euclidean_traits_2 from doc, examples, demo and testsuite

Version 11.47 (4 October 2003) [af]
- fixed bug in the caching (forgot to clear list)
- Made points set in demo less equally distributed

Version 11.46 (1 October 2003) [af]
- Made Alpha_shape_euclidean_traits obsolete

Version 11.45 (30 September 2003) [af]
- Resubmission

Version 11.44 (30 September 2003) [af]
- Moved \chapter from alpha2.tex to main.tex

Version 11.43
- new headers

Version 11.42 [rursu]
- Qt_help_window class is in the namespace CGAL

Version 11.41
- Demo use the new class Qt_help_window instead of HelpWindow

Version 11.40
- changed demo project name alpha_shape.vcproj -> alpha_shapes_2.vcproj [rursu]

Version 11.39
- Demo use icon defined in Qt_widget package [rursu]

Version 11.38
- Simplified traits classes [af]

Version 11.37 (= 11.36) [af]
- Made predicates independent from CGAL::Cartesian
- Switched from Cartesian to Filtered_kernel<Simple_cartesian<double> >
- Removed  Alpha_shape_2<..>::op_vect_seg(std::vector<Edge>&)
- Introduced caching for the alpha shape vertex and edge lists

Version 11.35 [af]
- resubmission, as something went wrong with cgal_submit

Version 11.34 (16/07/03) [af]
- Alpha_shape_2 used backward compatible functions of Triangulation_2

Version 11.33 (09/07/03) [af]
- Alpha_shape_2 used backward compatible functions of Triangulation_2

Version 11.32 (25/06/03) [af]
- bugfix in demo: we forgot to blend in the Regular_triangulation_vertex_base_2

Version 11.31 (20/06/03)
- The same as before (I had to resubmit because the server 
  in Ultrecht was down and the changes were not taken into 
  account)

Version 11.30 (20/06/03)