@@ -115,18 +115,17 @@ class Weighted_alpha_shape_euclidean_traits_2 : public
 Regular_triangulation_euclidean_traits_2<R, typename R::FT> 
 {
 
-public: 
-  
-  typedef Weighted_alpha_shape_euclidean_traits_2<R> Self;
-  typedef typename R::FT FT;
-  typedef typename 
-   Regular_triangulation_euclidean_traits_2<R, typename R::FT>::Weighted_point 
-     Point;
+public:   
+  typedef Weighted_alpha_shape_euclidean_traits_2<R>                  Self;
+  typedef Regular_triangulation_euclidean_traits_2<R, typename R::FT> Base;
+  typedef typename R::FT                                              FT;
+  typedef typename Base::Weighted_point_2                             Point; 
+ 
 
   typedef CGAL::Compute_squared_radius_orthogonalcircleC2<FT, Self>
-  Compute_squared_radius_orthogonalcircle_2;
+                                   Compute_squared_radius_orthogonalcircle_2;
   typedef CGAL::Side_of_bounded_orthogonalcircleC2<Self>
-  Side_of_bounded_orthogonalcircle_2;
+                                    Side_of_bounded_orthogonalcircle_2;
   
   //------------------------------------------------------------------
 
