@@ -6,7 +6,7 @@
 #---------------------------------------------------------------------#
 # Choose the right include file from the <cgalroot>/make directory.
 
-CGAL_MAKEFILE = d:/cgal/CGAL-2.5-I-139/make/makefile_i686_CYGWINNT-5.0-1.3.12_ICL.EXE-7
+#CGAL_MAKEFILE = d:/cgal/CGAL-2.5-I-139/make/makefile_i686_CYGWINNT-5.0-1.3.12_ICL.EXE-7
 include $(CGAL_MAKEFILE)
 
 #---------------------------------------------------------------------#
